examples/pos/pure_block_parameter.effekt
extern pure def myId(): Int = "42"
type Foo { A() }

def hof{ a : () => Foo }: Foo = a()

def main() = {
   hof{A}
}
