examples/neg/namer/issue1191.effekt
def main() = {
  type Foo {
    F(block: () => Foo at {})
  }
}